# guardian-recovery-protocol

./: DEMO_GUIDE.md  IMPLEMENTATION_COMPLETE.md  ISSUES_AND_FIXES.md  README.md  complete_workflow_build_guide.md  plan.md  quick_summary_workflow.md
backend/: .env.example  .gitignore  package-lock.json  package.json
backend/sql/: add_account_hash.sql
backend/src/: index.ts
backend/src/config/: index.ts
backend/src/routes/: index.ts  recovery.routes.ts  session.routes.ts  user.routes.ts
backend/src/services/: casper.service.ts  contract.service.ts  deploy.service.ts  email.service.ts  index.ts  user.service.ts
backend/src/types/: index.ts
backend/wasm/: recovery_key_rotation.wasm
contracts/: Cargo.toml  rust-toolchain.toml
contracts/recovery_registry/src/: main.rs
contracts/test_contract/: Cargo.toml
contracts/test_contract/src/: main.rs
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/admin/: page.tsx
frontend/app/approve/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/execute/: page.tsx
frontend/app/recovery/: page.tsx
frontend/app/setup/: page.tsx
frontend/components/: colophon-section.tsx  hero-section.tsx  principles-section.tsx  signals-section.tsx  work-section.tsx
frontend/lib/: api.ts  casper-wallet.ts
